--- a/style.css
+++ b/style.css
@@ -248,13 +248,14 @@ main {
 }
 #photos:checked ~ .cards .photos {
   display: grid;
+  /* counter-increment: counter; */
 }
 #all:checked ~ .cards .card {
   display: grid;
 }
 #potrofolio .warber .cards {
   display: grid;
-  grid-template-columns: repeat(3, minmax(20%, 30%));
+  grid-template-columns: repeat(3, minmax(22vw, 23vw));
   gap: 2vw;
   justify-content: space-evenly;
 }
@@ -268,27 +269,28 @@ main {
   border-right: 1px solid #9999995a;
   border-bottom: 1px solid #9999995a;
   border-radius: 20px;
-  position: relative;
+  /* position: relative; */
 }
 #potrofolio .warber .cards .card .card-pic {
   /* background-color: rgba(0, 0, 0, 0.228); */
   border-radius: 20px;
-  position: absolute;
-  top: 0;
+  /* position: absolute; */
+  /* top: 0; */
 }
 #potrofolio .warber .cards .card .card-pic img {
-  width: 15vw;
-  height: 15vh;
-  margin: 0 2vw;
+  width: 22vw;
+  height: 30vh;
+  /* margin: 0 2vw; */
 }
 #potrofolio .warber .cards .card .bio {
-  position: relative;
+  /* position: relative;
   top: 20%;
-  left: 0;
+  left: 0; */
   display: flex;
   flex-flow: column;
   align-items: center;
   text-align: center;
+  gap: 7vh;
 }
 #potrofolio .warber .cards .card .bio h2 {
   background-color: #0b7daaa7;
@@ -303,6 +305,43 @@ main {
   font-size: 1vw;
   line-height: 24px;
   font-weight: normal;
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 23vw;
+  height: auto;
+  perspective: 1000px; /* Required for 3D effect */
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 22vw;
+  height: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d; /* Maintains 3D structure */
+}
+
+/* Flip on hover */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden; /* Hides reverse side */
+}
+
+.flip-card-front {
+  background-color: #bbbbbb00;
+}
+
+.flip-card-back {
+  background-color: rgba(30, 143, 255, 0);
+  transform: rotateY(180deg); /* Initially hidden */
 }
 
 /* ///////////////////////////////////////////////////// */
@@ -686,5 +725,6 @@ textarea {
 .fixed:hover {
   font-size: 3.5vw;
 }
+
 
 
